# fact-checker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: false_claim.py  opinion_claim.py  partially_true.py  true_claim.py  unverifiable.py
src/fact_checker/: cli.py  mcp_server.py
src/fact_checker/data/: domain_tiers.json  satire_domains.txt
src/fact_checker/models/: __init__.py  claim.py  evidence.py  verdict.py
src/fact_checker/pipeline/: __init__.py  classifier.py  credibility.py  fetch.py  llm.py  research_loop.py  synthesizer.py
src/fact_checker/search/: base.py  tavily.py
tests/: conftest.py
tests/cassettes/: test_tavily_search_returns_results.yaml
tests/integration/: test_search_tavily.py
