[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-checker"
version = "0.1.0"
description = "AI-powered fact-checking pipeline exposed as an MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "diskcache>=5.6",
    "fastmcp>=0.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13",
    "vcrpy>=6.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fact_checker = ["data/*.json", "data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--record-mode=none"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fact_checker"]